Module some section and New a page
1.module page_top_button/filter/banner section
2.create new page named new_hot_product

--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -180,7 +180,7 @@ $dropdown_triangle_height = 7px
 //+media-query( only screen ,max-width 900px )
 
 
-//tring
+//for scroll header css
 .scroll_header
     position: fixed;
     width: 100%;
