--- a/dev/limited_on_sale_entry/index.jade
+++ b/dev/limited_on_sale_entry/index.jade
@@ -1,27 +1,31 @@
 extends ../_general/temp_page.jade
+include ../_general/banner_section/banner_section.jade
 
 block content
-    img(src="../general/img/up.png").page_top_button
-    section#main_section
-        a(href="#")#main_banner.page_link
-            img(src="../general/img/banner.png")
+    include ../_general/page_top/page_top_button.jade
+    -var navArray = ["首頁","限時優惠"]
+    +banner_section("#","../general/img/banner.png",navArray,false)
 
-        #sub_section
-            span
-                .page_nav
-                    a(href="#") 首頁
-                    span.page_nav_separate >
-                    a(href="#") 限時優惠
+    //- section#main_section
+    //-     a(href="#")#main_banner.page_link
+    //-         img(src="../general/img/banner.png")
 
-                form
-                    label.commodity_filter
-                        select
-                            option(value='價格低到高') 價格低到高
-                            option(value='價格高到低') 價格高到低
-                            option(value='價格不要出現') 價格不要出現
-                            option(value='我是土豪') 我是土豪
+    //-     #sub_section
+    //-         span#page_info
+    //-             .page_nav
+    //-                 a(href="#") 首頁
+    //-                 span.page_nav_separate >
+    //-                 a(href="#") 限時優惠
 
-            span.commodity_count 共10項商品
+    //-             .commodity_count 共10項商品
+        
+    //-         form
+    //-             label.commodity_filter
+    //-                 select
+    //-                     option(value='價格低到高') 價格低到高
+    //-                     option(value='價格高到低') 價格高到低
+    //-                     option(value='價格不要出現') 價格不要出現
+    //-                     option(value='我是土豪') 我是土豪            
 
     a(href="#").page_link
         img(src="../general/img/限時優惠banner-A.png")
