--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -5,7 +5,7 @@ html
         block css
 
         link(href='all.css', rel='stylesheet')
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js')
+        script(src='../general/jquery-3.2.0.min.js')
         script(src='bundle.js')
         
         block js
