--- a/dev/new_hot_product/index.jade
+++ b/dev/new_hot_product/index.jade
@@ -1,7 +1,24 @@
 extends ../_general/temp_page.jade
 include ../_general/banner_section/banner_section.jade
+include ../_general/product/product.jade
+include ../_general/page_num/page_num.jade
 
 block content
     include ../_general/page_top/page_top_button.jade
     -var navArray = ["首頁","限時優惠","C&CHAT 幻彩系指油貼任選兩件500元"]
     +banner_section("","./asset/banner.png",navArray,true)
+
+    div#product
+        - var rows = 3,product = 10
+        - for (var x = 1; x <= 3*4 ; x++)
+            if(x <= 10)
+                if(x%5 == 0)
+                    +product("../general/img/商品一.png",true,"new")
+                else if(x%3 == 0)
+                    +product("../general/img/商品一.png",true,"hot")
+                else
+                    +product("../general/img/商品一.png",true,"")
+            else
+                 section.product_wrapper
+    
+    +page_num(1,3)
