--- a/dev/home/index.jade
+++ b/dev/home/index.jade
@@ -2,10 +2,10 @@ extends ../_general/temp_page.jade
 
 block css
     //link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.css')
-    link(rel='stylesheet', type='text/css', href='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.css')
+    link(rel='stylesheet', type='text/css', href='../general/slick/slick-theme.css')
 
 block js
-    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js')
+    script(type='text/javascript', src='../general/slick/slick.min.js')
     //script
 
 block content
