--- a/dev/new_hot_product/all.styl
+++ b/dev/new_hot_product/all.styl
@@ -5,6 +5,8 @@
 @import "../_general/product/product"
 @import "../_general/page_num/page_num"
 
+#main
+    padding: 0 10px
 /*override css in page_top_button*/
 .is_bottom
     bottom: 160px;
