--- a/dev/new_hot_product/index.jade
+++ b/dev/new_hot_product/index.jade
@@ -16,6 +16,8 @@ block content
                     +product("../general/img/商品一.png",true,"new")
                 else if(x%3 == 0)
                     +product("../general/img/商品一.png",true,"hot")
+                else if(x%4 == 0)
+                    +product("../general/img/商品一.png",true,"sale")
                 else
                     +product("../general/img/商品一.png",true,"")
             else
