login_first_buy complete
1.new login_first_buy and complete
2.module login section

--- a/dev/_general/banner_section/banner_section.styl
+++ b/dev/_general/banner_section/banner_section.styl
@@ -66,3 +66,6 @@
 +media-query( only screen ,max-width $phone_rwd_width )
     .page_link>img
         height: 130px
+    
+    .commodity_filter
+        padding-left: 2px
