--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -19,6 +19,9 @@ $pink_deep = #D5948E
 $brown = #8B572A
 $brown_icon_hover = #8E5651
 $gray_link = #9B9B9B
+$fb_background = #3767B8
+$fb_background_hover = #1B4678
+
 
 $font12 = 12px
 $font13 = 13px
