member_login page complete
member_login page finish wooooooow

--- a/dev/login_first_buy/all.styl
+++ b/dev/login_first_buy/all.styl
@@ -68,11 +68,11 @@ $button_and_input_width = 289px
             margin: 0 5px
         .title
             font-weight: initial
-            
+
     .first_buy>.go_to_pay
             margin-top: 10px
 
     .split_line
         min-height: 1px;
-        width: 120%;
+        width: 110%
         margin: 25px 0 15px;
