--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -235,6 +235,9 @@ rwd_header()
 //for scroll header css
 .scroll_header
     fixed_header()
+
+    +#main
+        margin-top: 156px //height of header
     // position: fixed;
     // width: 100%;
     // z-index: 20;
