--- a/dev/login_first_buy/all.styl
+++ b/dev/login_first_buy/all.styl
@@ -10,10 +10,11 @@ $button_and_input_width = 289px
 .section_wrapper
     display: flex;
     flex-axis: center
+    margin-top: -10%
 
 .split_line
     height: 100%;
-    min-height: 500px;
+    min-height: 450px;
     width: 1px;
     background: #c3c2c3;
     margin: 0 96px;
