--- a/dev/product_intro/index.jade
+++ b/dev/product_intro/index.jade
@@ -22,6 +22,11 @@ block content
                 img(src="./asset/商品係圖-5.png")
                 img(src="./asset/商品係圖-1.png")
                 img(src="./asset/商品係圖-2.png")
+                div
+                div
+                div
+                //-總共有10個就對了 有少就放幾個div補上
+                
 
             img(src="./asset/商品圖.png")#product_photo
         section.product_info_wrapper
