--- a/dev/member_login/all.styl
+++ b/dev/member_login/all.styl
@@ -6,8 +6,10 @@
     flex-axis: center
     flex-direction: column
 
-.section_wrapper>p
-    margin-top: 29px
+.section_wrapper
+    margin-top: -5%
+    &>p
+        margin-top: 29px
 //login.styl
 .sign_in
     color: $pink_medium
