forget_password page complete
1.finish forget_password page include rwd
2.用oocss 更模組化 login module

--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -53,6 +53,10 @@ h1,h2,h3,h4,h5,h6,p
 select
     outline: none
 
+button
+    border: none
+    outline: none
+    cursor: pointer
 /*RWD width define*/
 $footer_rwd_width = 850px
 $phone_rwd_width = 550px
