--- a/dev/login_first_buy/all.styl
+++ b/dev/login_first_buy/all.styl
@@ -3,6 +3,10 @@
 
 $button_and_input_width = 289px
 
+//override longin.styl
+.form_section
+    width: 289px
+//override longin.styl
 #main
     display: flex;
     flex-axis: center
