--- a/dev/_general/login/login.styl
+++ b/dev/_general/login/login.styl
@@ -1,15 +1,50 @@
-//login section
-.login_section
+.form_section
     display: flex
     flex-direction: column
     flex-axis: center
     width: 289px
+    width: 400px
 
     &>h1
         color: #D6645F
         font-size: 28px
-        margin-bottom: 32px
         font-weight: lighter
+
+    &>form,.form
+        width: 100%
+
+.section_box
+    width: 100%
+    height: 51px
+
+.input_box    
+    border-radius: 10px
+    box-sizing: border-box
+    margin: 8px 0
+    border: 1px solid #979797
+    padding: 15px 25px
+    +placeholder()
+        color: #C3C2C3
+        font-size: 14px
+
+.input_button
+    border-radius: 10px
+    background: $pink_deep
+    margin-top: 15px
+    color: white
+    font-size: 18px
+    cursor: pointer
+    border: none
+    text-align: center
+    &:hover
+        background: #C8837C
+
+//login section
+.login_section
+    
+    &>h1
+        margin-bottom: 32px
+
     &>hr
         width: 100%
         padding: 0;
@@ -26,38 +61,16 @@
             padding: 0 0.5em;
             background: white;
 
-.login_input,.login_button
-    width: 100%
-    height: 51px
-    border-radius: 10px
-    box-sizing: border-box
-    margin: 8px 0
-
-.login_input
-    border: 1px solid #979797
-    padding: 15px 25px
-    +placeholder()
-        color: #C3C2C3
-        font-size: 14px
-
-.login_button
-    display: flex
-    flex-axis: center
-    color: white
-    font-size: 18px
-    cursor: pointer
-
+    
 .fb_login
     background: $fb_background
-
+    margin: 8px 0
+    display: flex
+    flex-axis: center
     &:hover
         background: $fb_background_hover
 
-.email_login
-    background: $pink_deep
-    margin-top: 15px
-    &:hover
-        background: #C8837C
+
 .error_message
     color: #950012
     font-size: 12px
@@ -66,4 +79,6 @@
     margin-top: 15px
     color: $pink_medium
     
-//login section
++media-query( all, max-width $phone_rwd_width )
+    .form_section
+        width: 289px
