--- a/dev/forget_password/all.styl
+++ b/dev/forget_password/all.styl
@@ -1,17 +1,86 @@
 @import "../_general/general"
 @import "../_general/login/login"
 
-#main,.section_wrapper
-    display: flex;
-    flex-axis: center
+#main
+    display: flex
+    flex-axis:center
     flex-direction: column
 
-.section_wrapper>p
-    margin-top: 29px
-//login.styl
-.sign_in
-    color: $pink_medium
-    text-decoration: underline
+.input_date_wrapper
+    display: flex
+    justify-content: space-between
+    flex-wrap: nowrap
+    .input_year
+        flex: 2 2 184px
+        width: 184px
+    .input_month,.input_day
+        flex: 1 1 100px
+        width: 100px
+        margin-left: 7px
+
+.form>button
+    margin-top: 25px
+
+.forget_password_section>p       
+    color:#4A4A4A;
+    margin: 24px 0 30px
+    text-align: center
+
+.reset_password_section
+    display: none;
+    text-align: center
+    >h1
+        margin-bottom: 32px
 
 #footer
     display: none
+
+/*dialig*/
+#main
+    position: relative
+#dialog
+    background: #FFF8F6;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
+    color: #4A4A4A
+    border: none
+    display: flex
+    display: none
+    flex-direction: column
+    flex-axis:center
+    padding: 76px 56px
+    position: absolute
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    text-align: center
+
+    &>h1
+        font-size: 30px
+    &>p
+        font-size: 18px
+        margin: 20px 0 45px
+    button
+        display: flex
+        padding: 7px 32px
+        background: #D5948E;
+        border-radius: 6px;
+        color: white
+
++media-query( all, max-width $phone_rwd_width )
+    #dialog
+        margin: 0 10px
+
+/*dialig*/
+#dialog
+    width: 100%
+    max-width: 500px
+    
+
++media-query( all, max-width $phone_rwd_width )
+    .input_date_wrapper
+        .input_year
+            width: 111px
+        .input_month,.input_day
+            width: 84px
+            margin-left: 5px
