--- a/dev/forget_password/index.jade
+++ b/dev/forget_password/index.jade
@@ -1,21 +1,27 @@
 extends ../_general/temp_page.jade
 
 block content
-    section.forget_password_section
+    section.forget_password_section.form_section
         h1 忘記密碼
         p 請輸入當初註冊的email與生日，系統將會寄送重設密碼通知信至此信箱，謝謝。
-        form
-            input(type="text" placeholder="請輸入已經註冊Email" require).login_input
-            input(type="text" placeholder="YYY" require).year_input
-            input(type="text" placeholder="MM" require).month_input
-            input(type="text" placeholder="DD" require).day_input
+        div.form
+            input(type="text" placeholder="請輸入已經註冊Email" require).input_box.section_box
+            span.input_date_wrapper
+                input(type="text" placeholder="YYY" require).input_box.input_year
+                input(type="text" placeholder="MM" require).input_box.input_month
+                input(type="text" placeholder="DD" require).input_box.input_day
             div.error_message Email或生日輸入錯誤/該Email尚未註冊
-            input(type="submit" value="送出").login_button.email_login
+            button.input_button.input_box.section_box#register_button 送出
     
-    section.reset_password_section
+    section.reset_password_section.form_section
         h1  重設密碼
-        form
-            input(type="password" placeholder="請輸入已經註冊Email" require).login_input
-            input(type="password" placeholder="請再次輸入密碼" require).login_input
+        div.form
+            input(type="password" placeholder="請輸入已經註冊Email" require).input_box.section_box
+            input(type="password" placeholder="請再次輸入密碼" require).input_box.section_box
             div.error_message 密碼輸入錯誤或兩次密碼輸入不符
-            input(type="submit" value="送出").login_button.email_login
+            button.input_button.input_box.section_box#reset_button 送出
+    
+    div#dialog
+        h1 重設密碼通知信已寄送
+        p 請到信箱收取通知信，點擊信件內的連結就可重新設定密碼，謝謝。
+        button#check_receive 確定
