Fix forget_password bug
1.更改font size/weight
2.remove input box shadow on iphone (safari , chrome)

--- a/dev/_general/login/login.styl
+++ b/dev/_general/login/login.styl
@@ -23,6 +23,7 @@
     margin: 8px 0
     border: 1px solid #979797
     padding: 15px 25px
+    -webkit-appearance: none;
     +placeholder()
         color: #C3C2C3
         font-size: 14px
