--- a/dev/_general/login/login.styl
+++ b/dev/_general/login/login.styl
@@ -9,7 +9,7 @@
         color: #D6645F
         font-size: 28px
         font-weight: lighter
-
+        text-align: center;
     &>form,.form
         width: 100%
 
