--- a/dev/forget_password/all.styl
+++ b/dev/forget_password/all.styl
@@ -1,22 +1,11 @@
 @import "../_general/general"
 @import "../_general/login/login"
+@import "../_general/login/register_date"
 
 #main
     display: flex
     flex-axis:center
     flex-direction: column
-
-.input_date_wrapper
-    display: flex
-    justify-content: space-between
-    flex-wrap: nowrap
-    .input_year
-        flex: 2 2 184px
-        width: 184px
-    .input_month,.input_day
-        flex: 1 1 100px
-        width: 100px
-        margin-left: 7px
 
 .form>button
     margin-top: 25px
@@ -37,6 +26,9 @@
 #footer
     display: none
 
+#dialog
+    width: 100%
+    max-width: 500px
 /*dialig*/
 #main
     position: relative
@@ -71,18 +63,7 @@
 
 +media-query( all, max-width $phone_rwd_width )
     #dialog
-        margin: 0 10px
+        //margin: 0 10px
+        max-width: calc("100vw - 20px");
 
 /*dialig*/
-#dialog
-    width: 100%
-    max-width: 500px
-    
-
-+media-query( all, max-width $phone_rwd_width )
-    .input_date_wrapper
-        .input_year
-            width: 111px
-        .input_month,.input_day
-            width: 84px
-            margin-left: 5px
