--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -1,39 +1,33 @@
 @import "../_general/general"
 @import "../_general/login/login"
+@import "../_general/login/register_date"
 
+/*overrid login.styl*/
+.error_message
+    text-align: initial;
+/*overrid login.styl*/
 #main
     display: flex
     flex-axis:center
     flex-direction: column
-
-.input_date_wrapper
-    display: flex
-    justify-content: space-between
-    flex-wrap: nowrap
-    .input_year
-        flex: 2 2 184px
-        width: 184px
-    .input_month,.input_day
-        flex: 1 1 100px
-        width: 100px
-        margin-left: 7px
-
-.form>button
-    margin-top: 25px
-
-.forget_password_section>p       
-    color:#4A4A4A;
-    margin: 24px 0 30px
-    text-align: center
-
-.reset_password_section
+.register_data_section
     display: none;
+
+.reminder
+    color: #D6645F
     text-align: center
-    >h1
+    a
+        text-decoration: underline
+.marB32
         margin-bottom: 32px
 
 #footer
     display: none
+
+
+#dialog
+    width: 100%
+    max-width: 500px
 
 /*dialig*/
 #main
@@ -69,18 +63,10 @@
 
 +media-query( all, max-width $phone_rwd_width )
     #dialog
-        margin: 0 10px
+        //margin: 0 10px
+        max-width: calc("100vw - 20px");
 
 /*dialig*/
-#dialog
-    width: 100%
-    max-width: 500px
+
     
 
-+media-query( all, max-width $phone_rwd_width )
-    .input_date_wrapper
-        .input_year
-            width: 111px
-        .input_month,.input_day
-            width: 84px
-            margin-left: 5px
