Fixed member_register page some bug
1.修正member_register placeholder style/text
2.修正member_register js UI flow
3.error_msg 對齊placeholder

--- a/dev/_general/login/login.styl
+++ b/dev/_general/login/login.styl
@@ -27,6 +27,7 @@
     +placeholder()
         color: #C3C2C3
         font-size: 14px
+        font-weight: 100
 
 .input_button
     border-radius: 10px
