--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -5,6 +5,7 @@
 /*overrid login.styl*/
 .error_message
     text-align: initial;
+    padding-left: 25px;
 /*overrid login.styl*/
 #main
     display: flex
