--- a/dev/member_register/index.jade
+++ b/dev/member_register/index.jade
@@ -9,7 +9,6 @@ block content
         div.form
             input(type="email" placeholder="Eamil" require).input_box.section_box
             .error_message 請輸入email
-            .reminder 請確認郵件地址是否正確，該email會做為日後訂單資料寄送地址
             input(type="text" placeholder="姓名" require).input_box.section_box
             .error_message 請輸入姓名
             input(type="phone" placeholder="聯絡電話" require).input_box.section_box
@@ -25,7 +24,7 @@ block content
                 | 與
                 a(href="") 購物須知
                 
-            button.input_button.input_box.section_box#register_button 確認
+            button.input_button.input_box.section_box#check_register_button 確認
     
     div#dialog
         h1 恭喜您已完成註冊
